tests/rpm-pkgs/sscg-3.0.0-1.fc35/output-exp@symbiotic/scan-results.err
Error: SYMBIOTIC_WARNING:
sscg-3.0.0/redhat-linux-build/../src/arguments.c:151: error: memory error: out of bound pointer
sscg-3.0.0/redhat-linux-build/../src/arguments.c:151: note: call stack: function sscg_handle_arguments (, =2, =0, =0)
sscg-3.0.0/redhat-linux-build/../src/sscg.c:124: note: call stack: function main (=2, =0)
sscg-3.0.0/redhat-linux-build/../src/arguments.c:151: note: Additional Info: address: 1095216660480:136
sscg-3.0.0/redhat-linux-build/../src/arguments.c:151: note: Additional Info: pointing to: none
sscg-3.0.0/redhat-linux-build/../src/sscg.c:117:26: note: Non-deterministic values: talloc_named_const: len 8 bytes, [0x1|7 times 0x0] (i64: 1)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/sscg.c:117:26 (offset): note: Non-deterministic values: talloc_named_const: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/arguments.c:145:25: note: Non-deterministic values: talloc_named_const: len 8 bytes, [0x1|7 times 0x0] (i64: 1)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/arguments.c:145:25 (offset): note: Non-deterministic values: talloc_named_const: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/arguments.c:148:34: note: Non-deterministic values: _talloc_zero: len 8 bytes, [4 times 0x0|0xff|3 times 0x0] (i64: 1095216660480)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/arguments.c:148:34 (offset): note: Non-deterministic values: _talloc_zero: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/arguments.c:152:5: note: Non-deterministic values: _talloc_zero_array: len 8 bytes, [8 times 0x0] (i64: 0)
#  149|     CHECK_MEM (options);
#  150|   
#  151|->   options->streams =
#  152|       talloc_zero_array (options, struct sscg_stream *, SSCG_NUM_FILE_TYPES);
#  153|   

Error: SYMBIOTIC_WARNING:
sscg-3.0.0/redhat-linux-build/../src/bignum.c:63: error: memory error: out of bound pointer
sscg-3.0.0/redhat-linux-build/../src/bignum.c:63: note: call stack: function sscg_init_bignum (, =65537, =0)
sscg-3.0.0/redhat-linux-build/../src/key.c:63: note: call stack: function sscg_generate_rsa_key (, =512, =0)
sscg-3.0.0/redhat-linux-build/../test/generate_rsa_key_test.c:46: note: call stack: function main (=2, =0)
sscg-3.0.0/redhat-linux-build/../src/bignum.c:63: note: Additional Info: address: 65280:0
sscg-3.0.0/redhat-linux-build/../src/bignum.c:63: note: Additional Info: pointing to: none
sscg-3.0.0/redhat-linux-build/../test/generate_rsa_key_test.c:36:25: note: Non-deterministic values: talloc_named_const: len 8 bytes, [0x1|7 times 0x0] (i64: 1)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../test/generate_rsa_key_test.c:36:25 (offset): note: Non-deterministic values: talloc_named_const: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/key.c:56:13: note: Non-deterministic values: talloc_named_const: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/key.c:59:9: note: Non-deterministic values: RSA_new: len 8 bytes, [0x1|7 times 0x0] (i64: 1)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/key.c:59:9 (offset): note: Non-deterministic values: RSA_new: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/bignum.c:43:25: note: Non-deterministic values: talloc_named_const: len 8 bytes, [0x1|7 times 0x0] (i64: 1)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/bignum.c:43:25 (offset): note: Non-deterministic values: talloc_named_const: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/bignum.c:49:12: note: Non-deterministic values: _talloc_zero: len 8 bytes, [0x0|0xff|6 times 0x0] (i64: 65280)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/bignum.c:49:12 (offset): note: Non-deterministic values: _talloc_zero: len 8 bytes, [8 times 0x0] (i64: 0)
sscg-3.0.0/redhat-linux-build/../src/bignum.c:56:19: note: Non-deterministic values: BN_new: len 8 bytes, [0x1|7 times 0x0] (i64: 1)
/builddir/build/BUILD/sscg-3.0.0/redhat-linux-build/../src/bignum.c:56:19 (offset): note: Non-deterministic values: BN_new: len 8 bytes, [8 times 0x0] (i64: 0)
#   61|       }
#   62|   
#   63|->   bignum->bn = sslbn;
#   64|     talloc_set_destructor ((TALLOC_CTX *)bignum, _sscg_bignum_destructor);
#   65|   
